--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ sha2 = { version = "0.9", default-features = false }
 sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
 sp-tracing = { version = "5.0.0",  git = "https://github.com/paritytech/substrate.git" }
 pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
+rand_core = { version = "0.5", features = ["getrandom"] }
 
 [features]
 default = ["std"]
